--- a/app/src/main/res/layout/layout_toolbar_chat.xml
+++ b/app/src/main/res/layout/layout_toolbar_chat.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_arrow"
+            android:backgroundTint="@color/color_greys_01_dark_01_100"
+            />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_search"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="8.3dp"
+            android:backgroundTint="@color/color_greys_01_dark_01_100"
+            />
+
+    </RelativeLayout>
+
+</Toolbar>
