--- a/app/src/main/res/layout/activity_stories.xml
+++ b/app/src/main/res/layout/activity_stories.xml
@@ -63,8 +63,8 @@
         app:layout_constraintStart_toEndOf="@id/like_iv"
         app:layout_constraintTop_toTopOf="@id/bottomView" />
 
-    <ImageView
-        android:id="@+id/send_iv"
+    <ImageButton
+        android:id="@+id/btn_send"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
