--- a/app/src/main/res/layout/activity_chat_group.xml
+++ b/app/src/main/res/layout/activity_chat_group.xml
@@ -10,10 +10,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/chat_group_sending_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_msg_receiver_chat_group" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/chat_group_toolbar"
