--- a/app/src/main/res/drawable/circle_primary_color.xml
+++ b/app/src/main/res/drawable/circle_primary_color.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid
-        android:color="@color/color_solid_primary"/>
+    <solid android:color="@color/color_solid_primary" />
 
     <size
-        android:width="120dp"
-        android:height="120dp"/>
+        android:width="24dp"
+        android:height="24dp" />
 </shape>
