--- a/app/src/main/res/layout/item_chat_overview_single.xml
+++ b/app/src/main/res/layout/item_chat_overview_single.xml
@@ -1,85 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="83.3dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="10dp"
     app:cardBackgroundColor="@color/color_greys_04_extralight_01_100"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
-    app:cardCornerRadius="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    app:cardCornerRadius="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:paddingStart="20dp"
+        android:paddingTop="24dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="24dp">
 
         <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/chat_overview_user_img"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="15dp"
-            android:id="@+id/img_user"
-            android:src="@color/colorPrimary"
             android:scaleType="centerCrop"
+            android:src="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:riv_corner_radius="5dip"
-            app:riv_mutate_background="true"
-            />
+            app:riv_mutate_background="true" />
 
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
+            android:id="@+id/chat_overview_username"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Emma Doe"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/img_user"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:textColor="@color/color_greys_01_dark_01_100"
-            />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sounds awesome!"
-            app:layout_constraintStart_toEndOf="@+id/img_user"
-            android:layout_marginStart="15dp"
-            android:textColor="@color/color_greys_01_dark_01_100"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toBottomOf="@+id/img_user"
-            />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="19.23"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/chat_overview_msg_time_tv"
+            app:layout_constraintStart_toEndOf="@+id/chat_overview_user_img"
             app:layout_constraintTop_toTopOf="parent"
+            tools:text="Emma Doe" />
+
+        <TextView
+            android:id="@+id/chat_overview_last_msg_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:textColor="@color/color_greys_01_dark_01_100"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@id/chat_overview_msg_count_tv"
+            app:layout_constraintStart_toStartOf="@id/chat_overview_username"
+            app:layout_constraintTop_toBottomOf="@id/chat_overview_username"
+            tools:text="Sounds awesome!" />
+
+        <TextView
+            android:id="@+id/chat_overview_msg_time_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="@color/grey_light"
-            />
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/chat_overview_username"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/chat_overview_username"
+            tools:text="19:23" />
 
         <TextView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            app:layout_constraintBottom_toBottomOf="@+id/img_user"
-            app:layout_constraintEnd_toEndOf="@+id/textView8"
+            android:id="@+id/chat_overview_msg_count_tv"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:background="@drawable/circle_primary_color"
-            android:text="99"
-            android:textColor="@color/color_greys_05_white_01_100"
             android:gravity="center"
-            android:textSize="7sp"
-            />
-
+            android:textColor="@color/color_greys_05_white_01_100"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toBottomOf="@id/chat_overview_last_msg_tv"
+            app:layout_constraintEnd_toEndOf="@+id/chat_overview_msg_time_tv"
+            app:layout_constraintStart_toEndOf="@id/chat_overview_last_msg_tv"
+            app:layout_constraintTop_toTopOf="@id/chat_overview_last_msg_tv"
+            tools:ignore="SmallSp"
+            tools:text="99" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </com.google.android.material.card.MaterialCardView>
